# cpp_utils

./: .gitignore  CMakeLists.txt  CppUtils.sln  README.md  biicode.conf  conanfile.txt
TestFileUtils/: TestFile.cpp  TestFileUtils.cpp  TestFileUtils.vcxproj  TestPath.cpp  Test_File.cpp  Test_FileUtils_build_path.cpp  Test_FileUtils_list_files.cpp  Test_Path.cpp  Test_build_path.cpp
TestUtils/: TestFileUtils.cpp  TestStringUtils.cpp  TestUtils.vcxproj
Utils/: Utils.cbp  Utils.depend  Utils.layout  Utils.vcxproj  Utils.vcxproj.filters
Utils/src/: Exception.cpp  Exception.h  FileException.cpp  FileException.h  FileHandler.cpp  FileHandler.h  FileUtils.cpp  FileUtils.h  Goemetry.cpp  Goemetry.h  Lang.cpp  Lang.h  Log.cpp  Log.h  Logger.cpp  Logger.h  Properties.cpp  Properties.h  PropertyException.cpp  PropertyException.h  Singleton.cpp  Singleton.h  SpecializedException.h  StringUtils.cpp  StringUtils.h  Timer.cpp  Timer.h  Translator.cpp  Translator.h  Utils.cpp  Utils.h  file_handler.cpp  file_handler.h  fs_utils.cpp  fs_utils.h  geometry.cpp  goemetry.h  lexicon.cpp  (+11 more)
src/: geometry.cpp  goemetry.h  logger.cpp  logger.h  properties.cpp  properties.h  string_utils.cpp  string_utils.h  timer.cpp  timer.h
test/: test_all.cpp  test_file_utils.cpp  test_geometry.cpp  test_list_files.cpp  test_logger.cpp  test_others.cpp  test_path_build_1.cpp  test_string_utils.cpp  test_suites.cpp  test_timer.cpp
test_suites/: test_file_utils.cpp  test_fs_list_files.cpp  test_list_files.cpp  test_path_build_1.cpp  test_path_build_2.cpp  test_string_utils.cpp  test_suites.cpp
(+28 files in other folders)
